Update title page and add dedication section in main.tex

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -148,8 +148,8 @@
 % Document information for masterthesis.cls
 \title{A serious game for High Performance Computing}
 \author{Szymon Zinkowicz}
-\advisor{Daniele D'Agostino}
-\examiner{Maura Cerioli}
+\advisor{Prof. Daniele D'Agostino}
+\examiner{Prof. Maura Cerioli}
 
 % Generate title page using masterthesis.cls
 \maketitle
@@ -158,17 +158,20 @@
 %	DEDICATION (Optional)
 %-----------------------------------------------------------------------
 
-% Uncomment and personalize the dedication below:
-% TODO: Decide on dedication text
-% \dedication{
-% \textit{To [I need to decide to whom I want to dedicate this work],\\
-% [Placeholder]}
-% }
+\dedication{
+    \textit{To my father Piotr,\\
+        from whom I learned modesty, hard work, and integrity, and whose sacrifices made this possible.}
 
-% Example dedications:
-% \dedication{\textit{To my family,\\for their unwavering support}}
-% \dedication{\textit{To my parents}}
-% \dedication{\textit{To my friends,\\for their encouragement and understanding}}
+    \vspace{1.5\baselineskip}
+
+    \textit{To my mother Wioletta,\\
+        who always believed in me and pushed me forward.}
+
+    \vspace{1.5\baselineskip}
+
+    \textit{To my girlfriend Magdalena,\\
+        who has always been patient and caring.}
+}
 
 %-----------------------------------------------------------------------
 %	ABSTRACT
