Fixed comments: and key contributions in main.tex for clarity and precision

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -180,17 +180,17 @@
 \chapter*{Abstract}
 \addcontentsline{toc}{chapter}{Abstract}
 
-High-Performance Computing (HPC) and parallel programming pose significant pedagogical challenges, requiring students to internalize abstractions without tangible interactive experiences. Serious games facilitate intuitive understanding through engagement, surfacing misconceptions and enabling targeted instruction.
+High-Performance Computing (HPC) and parallel programming pose significant pedagogical challenges, requiring students to internalize abstractions at the beginning without tangible interactive experiences. Serious games facilitate intuitive understanding through engagement, surfacing misconceptions and enabling targeted instruction.
 
-This thesis presents an educational serious game teaching fundamental parallel computing paradigms—specifically OpenMP (shared memory)—through interactive card-sorting mechanics on mobile devices. The game materializes abstract concepts through concrete manipulation: players sort cards collaboratively in multiplayer mode with private buffer zones, simulating OpenMP shared memory with thread-local storage. Students cooperate via a web interface to minimize sorting time under constraints, learning speedup, scalability, communication overhead, multithreading, and message passing.
+This thesis presents an educational serious game with the goal to support teachers in presenting fundamental parallel computing concepts—specifically OpenMP (shared memory)—through interactive card-sorting mechanics in web browsers. The game materializes abstract concepts through concrete manipulation: players sort cards collaboratively in multiplayer mode with private buffer zones, simulating OpenMP shared memory with thread-local storage. Students cooperate via a Web interface to minimize sorting time under constraints, learning concepts like speedup, scalability, communication overhead, multithreading, and message passing.
 
-Implemented using Godot Engine with web export capabilities, this work resolves pedagogical and technical constraints in web-based educational multiplayer games. Development encompassed platform identification supporting extensible networking and prototype iteration.
+Implemented using the Godot Engine with web export capabilities, this work investigates both pedagogical and technical challenges inherent in the development of web-based educational multiplayer games. The development process involved the identification of a suitable cross-platform game engine, the design of extensible networking mechanisms, and iterative prototyping to balance educational goals with technical feasibility.
 
-Key contributions include: (1) novel pedagogical mapping between card-sorting mechanics and HPC paradigms derived from physical classroom experiments, (2) robust multiplayer state synchronization for educational purposes using GDSync, (3) responsive UI/UX solutions for manipulating 50+ interactive elements across screen sizes in web browsers, (4) comprehensive documentation of technical challenges and solutions regarding GDSync and multiplayer synchronization, and (5) an open-source, extensible platform for HPC education research suitable for conference publication and scientific journals.
+Key contributions include: (1) novel pedagogical mapping between card-sorting mechanics and HPC concepts derived from physical classroom experiments, (2) robust multiplayer state synchronization for educational purposes using GDSync, (3) responsive UI/UX solutions for manipulating 50+ interactive elements across screen sizes in web browsers, (4) comprehensive documentation of technical challenges and solutions regarding GDSync and multiplayer synchronization, and (5) an open-source, extensible platform for HPC education research suitable for conference publication and scientific journals.
 
 \textbf{Keywords:} Serious Games, High-Performance Computing, Parallel Computing Education, OpenMP,
-%MPI, 
-Mobile Game Development, Multiplayer Synchronization, Godot Engine, GDScript, Card Sorting, Educational Technology
+%MPI,
+Web-Based Game Development, Multiplayer Synchronization, Godot Engine, GDScript, Card Sorting, Educational Technology
 
 %-----------------------------------------------------------------------
 %	ACKNOWLEDGEMENTS
